# macost

./: .dockerignore  .gitignore  API_CONTRACT.md  CLAUDE.md  README.md  docker-compose.yml  render.yaml
.claude/: CLAUDE.md  gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/: gsd-add-tests.md  gsd-ai-integration-phase.md  gsd-audit-fix.md  gsd-audit-milestone.md  gsd-audit-uat.md  gsd-autonomous.md  gsd-capture.md  gsd-cleanup.md  gsd-code-review.md  gsd-complete-milestone.md  gsd-config.md  gsd-debug.md  gsd-discuss-phase.md  gsd-docs-update.md  gsd-eval-review.md  (+44 more)
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  Dockerfile  main.py  requirements.txt
context/: Macost_PRD.md  Macost_Sitemap_Pages.md
docs/: PANDUAN_TEKNIKAL_TIM.md
(+392 files in other folders)
